--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html  {
     height: 100%;
+    min-height: 750px;
     font-size: 70%;  /* 62.5% of 16px = 10px */
-    overflow: hidden;
 }
 
 body {
@@ -63,6 +63,10 @@ button{
     padding-top: 300px;
 }
 
+#modalMsgSessionBloque{
+    padding-top: 300px;
+}
+
 /* Adaptation mobile */
 @media (max-width: 576px) {
     .cadreTitre{
@@ -70,6 +74,9 @@ button{
     }
     .cadreForm{
         margin: 50px;
+    }
+    footer{
+        font-size: 0.6em;
     }
 }
 
